[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Prefabs/UI/Themes/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Script/Menus/Game Over Screen.gd" type="Script" id=3]


[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="Game Over Screen" type="Popup"]
margin_top = 1.0
margin_right = 6.0
margin_bottom = 7.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Over" type="Label" parent="."]
margin_left = 108.0
margin_top = 32.0
margin_right = 226.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Over Menu" type="VBoxContainer" parent="."]
margin_left = 111.0
margin_top = 71.0
margin_right = 220.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Game Over Menu"]
margin_right = 109.0
margin_bottom = 18.0
text = "Restart"
flat = true

[node name="Options" type="Button" parent="Game Over Menu"]
margin_top = 22.0
margin_right = 109.0
margin_bottom = 40.0
disabled = true
text = "Options"
flat = true

[node name="Exit" type="Button" parent="Game Over Menu"]
margin_top = 44.0
margin_right = 109.0
margin_bottom = 62.0
text = "Exit"
flat = true
[connection signal="pressed" from="Game Over Menu/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Game Over Menu/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Game Over Menu/Exit" to="." method="_on_Exit_pressed"]
